--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <h2 class="text-3xl font-bold text-slate-900 mb-2">Engº Alan Queiroz da Silva</h2>
                     <p class="text-blue-700 font-bold mb-6 text-sm">CREA/PA: 14.414 – D | 19 Anos de Experiência</p>
                     <p class="text-slate-600 mb-6 leading-relaxed">
-                        Graduado em Engenharia de Telecomunicações (IESAM-PA) com especializações em Segurança da Informação e Sistemas de Telecomunicações. Especialista Executivo no Governo do Acre, atuando na gestão de anéis ópticos metropolitanos e infraestrutura TIC corporativa.
+                        Graduado em Engenharia de Telecomunicações com especializações em Segurança da Informação e Sistemas de Telecomunicações.
                     </p>
                     <div class="flex gap-4">
                         <a href="http://lattes.cnpq.br/7450522116006863" target="_blank" class="bg-slate-900 text-white px-6 py-2 rounded text-xs font-bold hover:bg-blue-700 transition">Currículo Lattes</a>
@@ -140,7 +140,7 @@
                 <h2 class="text-3xl font-bold mb-8 italic">Onde Estamos</h2>
                 <div class="space-y-6 text-slate-400 text-sm mb-10">
                     <p class="flex items-center gap-3">📍 Rua Tiradentes, 158, Vilage Tiradentes, Rio Branco - AC</p>
-                    <p class="flex items-center gap-3">📞 (68) 98114-5306</p>
+                    <p class="flex items-center gap-3">📞 +55(68) 98114-5306</p>
                     <p class="flex items-center gap-3">✉️ alanqsilva@gmail.com</p>
                 </div>
                 <div class="h-80 rounded-2xl overflow-hidden border-4 border-white/10 shadow-2xl">
@@ -160,7 +160,7 @@
     </section>
 
     <footer class="bg-slate-950 py-10 text-center text-slate-600 text-[10px] uppercase tracking-widest">
-        <p>© 2026 ACPTelecom Engenharia. Rio Branco - AC.</p>
+        <p>© 2026 ACPTelecom - Alan Consultoria e Projetos de Telecomunicações. Rio Branco - AC.</p>
     </footer>
 
 </body>
