--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-HTML
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -82,7 +81,8 @@ HTML
                         </p>
                         <div class="bg-white/5 p-6 rounded-2xl border-l-4 border-cyan-500">
                             <p class="text-sm italic">
-                                "Destaco minha atuação em TICs na rede de dados corporativa e Telefonia IP. Atuo também como profissional liberal na elaboração de projetos de fibra óptica, 
+                                "Destaco minha atuação em TICs na rede de dados corporativa, Telefonia IP e o convênio com a <strong>RNP</strong> para a operação do <strong>Anel Óptico Governo do Acre</strong>, 
+                                utilizando o <strong>RBMetroNET (Redecomep-RNP)</strong> em Rio Branco-AC. Atuo também como profissional liberal na elaboração de projetos de fibra óptica, 
                                 redes wireless indoor/outdoor e datacenters."
                             </p>
                         </div>
@@ -138,7 +138,7 @@ HTML
     </section>
 
     <footer class="py-12 text-center text-slate-500 text-[10px] tracking-[0.3em] uppercase">
-        © 2026 ACPTELECOM • ALAN CONSULTORIA E PROJETOS DE TELECOMUNICAÇÕES • RIO BRANCO - AC
+        © 2026 ACPTELECOM • ENGENHARIA E CONSULTORIA • RIO BRANCO - AC
     </footer>
 
 </body>
